--- a/vip.html
+++ b/vip.html
@@ -2,7 +2,6 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tiện Ích Trịnh Hg - VIP PREMIUM</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
@@ -13,10 +12,7 @@
   <header class="app-header">
     <div class="header-left">
       <h1>Tiện Ích Của Trịnh Hg (VIP)</h1>
-      <div class="donate-info">
-        <span class="donate-label">VIP ACCESS</span>
-        <span class="donate-details">CẢM ƠN BẠN ĐÃ ỦNG HỘ!</span>
-      </div>
+      <div class="donate-info"><span class="donate-label">VIP ACCESS</span><span class="donate-details">CẢM ƠN BẠN ĐÃ ỦNG HỘ!</span></div>
     </div>
     <div class="header-center">
       <nav class="tabs">
@@ -26,10 +22,7 @@
       </nav>
     </div>
     <div class="header-right">
-       <div class="vip-badge-info">
-          <span>👑 VIP MEMBER</span>
-          <a href="/logout" class="logout-btn">Đăng xuất</a>
-       </div>
+       <div class="vip-badge-info"><span>👑 VIP MEMBER</span><a href="/logout" class="logout-btn">Đăng xuất</a></div>
     </div>
   </header>
 
@@ -37,14 +30,10 @@
     
     <div id="settings" class="tab-content active">
       <div class="panel-container">
-        
         <div class="panel-header">
           <h2>Quản Lý Cặp Thay Thế (Full Mode)</h2>
           <div class="mode-actions">
-             <div class="select-wrapper">
-                <label>Chế độ:</label>
-                <select id="mode-select"></select>
-             </div>
+             <div class="select-wrapper"><label>Chế độ:</label><select id="mode-select"></select></div>
              <button id="add-mode" class="btn btn-modern btn-modern-primary">+ Mới</button>
              <button id="copy-mode" class="btn btn-modern btn-modern-secondary">Sao Chép</button>
              <button id="rename-mode" class="btn btn-modern btn-modern-warning">Đổi Tên</button>
@@ -65,13 +54,7 @@
         </div>
 
         <div class="advanced-settings">
-            <div class="setting-block">
-                <label>Ngoại lệ Auto Caps:</label>
-                <div class="input-with-btn">
-                    <input type="text" id="caps-exception" placeholder="Ví dụ: jpg, png, com, vn...">
-                    <button id="save-exception-btn" class="btn btn-modern btn-modern-primary">Lưu</button>
-                </div>
-            </div>
+            <div class="setting-block"><label>Ngoại lệ Auto Caps:</label><div class="input-with-btn"><input type="text" id="caps-exception"><button id="save-exception-btn" class="btn btn-modern btn-modern-primary">Lưu</button></div></div>
         </div>
 
         <div class="list-actions">
@@ -79,39 +62,21 @@
            <button id="save-settings" class="btn btn-action-blue icon-btn">Lưu tất cả</button>
         </div>
 
-        <div class="scroll-area">
-          <div id="punctuation-list"></div>
-          <div id="empty-state" class="hidden">Chưa có cặp thay thế nào.</div>
-        </div>
+        <div class="scroll-area"><div id="punctuation-list"></div><div id="empty-state" class="hidden">Chưa có cặp thay thế nào.</div></div>
       </div>
     </div>
 
     <div id="replace" class="tab-content">
       <div class="split-pane">
         <div class="pane input-pane">
-          <div class="pane-header">
-            <span>Văn bản gốc <span class="limit-label vip">(Không giới hạn)</span></span>
-            <span id="input-word-count" class="badge">Words: 0</span>
-          </div>
+          <div class="pane-header"><span>Văn bản gốc <span class="limit-label vip">(Không giới hạn)</span></span><span id="input-word-count" class="badge">Words: 0</span></div>
           <textarea id="input-text" class="custom-scrollbar" placeholder="Dán văn bản cần xử lý vào đây..."></textarea>
-          <div class="pane-footer">
-            <button id="replace-button" class="btn btn-primary full-width">THỰC HIỆN THAY THẾ</button>
-          </div>
+          <div class="pane-footer"><button id="replace-button" class="btn btn-primary full-width">THỰC HIỆN THAY THẾ</button></div>
         </div>
-
         <div class="pane output-pane">
-          <div class="pane-header">
-            <span>Kết quả</span>
-            <div class="counters-group">
-                <span id="count-replace" class="badge badge-yellow">Replace: 0</span>
-                <span id="count-caps" class="badge badge-blue">Auto-Caps: 0</span>
-                <span id="output-word-count" class="badge">Words: 0</span>
-            </div>
-          </div>
+          <div class="pane-header"><span>Kết quả</span><div class="counters-group"><span id="count-replace" class="badge badge-yellow">Replace: 0</span><span id="count-caps" class="badge badge-blue">Auto-Caps: 0</span><span id="output-word-count" class="badge">Words: 0</span></div></div>
           <div id="output-text" class="custom-scrollbar output-div" contenteditable="false" data-placeholder="..."></div>
-          <div class="pane-footer">
-            <button id="copy-button" class="btn btn-success full-width">Sao chép văn bản</button>
-          </div>
+          <div class="pane-footer"><button id="copy-button" class="btn btn-success full-width">Sao chép văn bản</button></div>
         </div>
       </div>
     </div>
@@ -122,7 +87,6 @@
             <label><input type="radio" name="split-type" value="count" checked> Chia theo số phần</label>
             <label><input type="radio" name="split-type" value="regex"> Chia theo Chương (Regex)</label>
         </div>
-
         <div id="split-type-count" class="split-sub-controls">
             <label>Số phần:</label>
             <div class="split-buttons-group">
@@ -137,33 +101,21 @@
                 <button class="split-mode-btn" data-split="10">10</button>
             </div>
         </div>
-
         <div id="split-type-regex" class="split-sub-controls hidden">
             <label>Regex nhận diện:</label>
-            <div class="input-with-btn">
-                <input type="text" id="split-regex-input" value="^(Chương|Chapter|Hồi|Quyển)\s+(?:[\d]+|[IVXLCDM]+|[a-zA-Zà-ỹ]+)" placeholder="Ví dụ: Chương 1, Chapter One...">
-                <button id="clear-split-regex" class="btn btn-modern btn-modern-danger btn-sm">Xóa kết quả</button>
-            </div>
+            <div class="input-with-btn"><input type="text" id="split-regex-input" value="^(Chương|Chapter|Hồi|Quyển)\s+(?:[\d]+|[IVXLCDM]+|[a-zA-Zà-ỹ]+)"><button id="clear-split-regex" class="btn btn-modern btn-modern-danger btn-sm">Xóa kết quả</button></div>
         </div>
       </div>
-
       <div class="split-grid-container">
         <div id="split-input-container" class="split-box input-box">
-          <div class="split-header">
-            <span>Văn bản gốc <span class="limit-label vip">(Không giới hạn)</span></span>
-            <span id="split-input-word-count" class="badge">Words: 0</span>
-          </div>
+          <div class="split-header"><span>Văn bản gốc <span class="limit-label vip">(Không giới hạn)</span></span><span id="split-input-word-count" class="badge">Words: 0</span></div>
           <textarea id="split-input-text" class="custom-scrollbar" placeholder="Dán cả bộ truyện vào đây..."></textarea>
-          <div class="split-footer">
-            <button id="split-action-btn" class="btn btn-primary full-width">Thực Hiện Chia</button>
-          </div>
+          <div class="split-footer"><button id="split-action-btn" class="btn btn-primary full-width">Thực Hiện Chia</button></div>
         </div>
         <div id="split-outputs-wrapper" class="outputs-wrapper"></div>
       </div>
     </div>
-
   </main>
-  
   <div id="notification-container"></div>
   <script src="index.js"></script>
 </body>
