--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tiện Ích Trịnh Hg - FREE</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
@@ -34,8 +35,18 @@
           <button class="modal-close">×</button>
           <h2 style="text-align:center; margin-top:0;">Bảng Giá Key VIP</h2>
           <div class="pricing-grid">
-              <div class="price-card"><span class="price-title">CÁ NHÂN</span><div>15k / 1 Tuần</div><div>40k / 1 Tháng</div><div class="price-note">Max 2 thiết bị</div></div>
-              <div class="price-card team"><span class="price-title">ĐỘI NHÓM</span><div>30k / 1 Tuần</div><div>80k / 1 Tháng</div><div class="price-note">Max 15 thiết bị</div></div>
+              <div class="price-card">
+                  <span class="price-title">CÁ NHÂN</span>
+                  <div>15k / 1 Tuần</div>
+                  <div>40k / 1 Tháng</div>
+                  <div style="font-style:italic; font-size:11px; margin-top:5px;">Max 2 thiết bị</div>
+              </div>
+              <div class="price-card team">
+                  <span class="price-title">ĐỘI NHÓM</span>
+                  <div>30k / 1 Tuần</div>
+                  <div>80k / 1 Tháng</div>
+                  <div style="font-style:italic; font-size:11px; margin-top:5px;">Max 15 thiết bị</div>
+              </div>
           </div>
           <div class="buy-actions">
               <a href="https://www.facebook.com/trinh.hg.57" target="_blank" class="btn-fb">Liên hệ Facebook</a>
