--- a/vip.html
+++ b/vip.html
@@ -117,6 +117,6 @@
     </div>
   </main>
   <div id="notification-container"></div>
-  <script src="index.js"></script>
+  <script src="vip.js"></script>
 </body>
 </html>
